messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-blue
  labels:
    app: django-app
    version: blue # <-- KEY: Identifies the stable version
spec:
  replicas: 2 # Standard number of replicas for the stable version
  selector:
    matchLabels:
      app: django-app
      version: blue
  template:
    metadata:
      labels:
        app: django-app
        version: blue
    spec:
      containers:
      - name: django-app
        image: <YOUR_DJANGO_IMAGE>:<BLUE_VERSION_TAG> # e.g., my-django-image:v1.0
        ports:
        - containerPort: 8000
        # ... other configurations
